# observearth-py

./: .gitignore  README.md  mkdocs.yml  poetry_usage_example.py  pyproject.toml
docs/: index.md
docs/api/: satellites.md
docs/contributing/: guidelines.md  setup.md  testing.md
docs/getting-started/: installation.md  quick-start.md
docs/tutorials/: basic-ndvi.md
observearth/: __init__.py
observearth/core/: base_satellite.py  export.py  indices.py  items.py  utils.py
observearth/datasets/: landsat8.py  sentinel2.py
tests/: test_indices.py  test_sentinel2.py
